fix: met à jour la date de mise à jour et rétablit l'overflow-x sur le corps

--- a/public/reset.css
+++ b/public/reset.css
@@ -1,7 +1,7 @@
 /* ==========================================
  * Reset CSS et print, made par Alsacréations
  * Consignes : à placer dans un layer inférieur aux autres layers
- * Mise à jour : 2026-02-19
+ * Mise à jour : 2026-03-04
  * ========================================== */
 
 /* ----------------------------
@@ -32,8 +32,8 @@ html {
 
 body {
   min-height: 100dvh;
-  overflow-x: clip;
   margin: 0;
+  overflow-x: clip;
   font-family: system-ui, sans-serif;
   line-height: 1.5;
   text-rendering: optimizespeed;
@@ -118,13 +118,13 @@ q {
 
 ul,
 ol {
-  margin: 0;
-  padding-inline-start: 1em;
-  list-style-position: outside;
+    padding-inline-start: 1em;
+    list-style-position: outside;
 
-  /* Suppression des styles des listes avec classe (version accessible) */
-  /* Attention : nécessite attribut role dans le HTML */
-  &[role="list"] {
+    /* Suppression des styles des listes (version accessible) */
+    /* Attention : nécessite attribut role dans le HTML */
+    &[role="list"] {
+    margin: 0;
     padding-inline-start: 0;
     list-style: none;
   }
